[tool.poetry]
name = "remind-knowledge-populating-worker"
version = "0.1.0"
description = "A RabbitMQ worker for populating knowledge in the ReMind system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
